--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,38 @@
 layout: default
 ---
 <div class="post">
+  <div class="breadcrumbs">
+    {% capture url_parts %} {{ page.url | remove: "/index.html" | replace:'/'," " }}{% endcapture %}
+    {% capture num_parts %}{{ url_parts | number_of_words | minus: 1 }}{% endcapture %}
+    {% assign previous="" %}
+    <ol>
+     {% if num_parts == "0" or num_parts == "-1" %}
+      <li><a href="/">Accueil</a> &#187; </li>
+     {% else %}
+      <li><a href="/">Accueil</a> &#187; </li>
+
+      {% for unused in page.content limit:num_parts %}
+       {% capture first_word %}{{ url_parts | truncatewords:1 | remove:"..."}}{% endcapture %}
+       {% capture previous %}{{ previous }}/{{ first_word }}{% endcapture %}
+
+       <li>
+         <a href="{{previous}}">
+           {% for page in site.pages %}
+             {% capture previousWithSlash %}{{ previous }}{{ "/" }}{% endcapture %}
+             {% if page.url == previous or page.url == previousWithSlash %}
+               {{ page.title }}
+             {% endif %}
+           {% endfor %}
+         </a>
+         &#187;
+       </li>
+
+       {% capture url_parts %}{{ url_parts | remove_first:first_word }}{% endcapture %}
+      {% endfor %}
+     {% endif %}
+     <li>{{ page.title }}</li>
+    </ol>
+  </div>
 
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
