--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,3 +1,20 @@
+/* CUSTOM STYLES */
+.breadcrumbs {
+  margin: -2em 0 2em;
+  color: #999;
+  font-size: .9em;
+  padding-top: .3em;
+
+  ol {
+    list-style-type: none;
+    margin: 0;
+
+    li {
+      display: inline-block;
+    }
+  }
+}
+
 /**
  * Site header
  */
